--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,11 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *, *::before, *::after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 .left-eye {
@@ -44,11 +44,12 @@ html {
 }
 
 @keyframes nudge {
+
   0% {
     transform: translate(0%);
   }
 
   100% {
     transform: translate(-40%);
-
+  }
 }
